--- a/index.html
+++ b/index.html
@@ -7,25 +7,18 @@
 <body>
     <h1>Tests</h1>
     
-    <button id="insertButton">Insert Data</button>
     <button id="readButton">Read Data</button>
     <button id="updateButton">Update Data</button>
 
     <p>Status: <span id="status"></span></p>
     <div id="datadisplay"></div>
-
+    <div id="Bitcoin"></div>
+    <div id="Polkadot"></div>
+    <div id="Luna"></div>
+    <div id="Dogecoin"></div>
+    <div id="XRP"></div>
+    <div id="BNB"></div>
     <script>
-        document.getElementById("insertButton").addEventListener("click", function() {
-            fetch("http://localhost:3000/insert")
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById("status").innerText = data;
-                })
-                .catch(error => {
-                    document.getElementById("status").innerText = "Error: " + error;
-                });
-        });
-
         document.getElementById("readButton").addEventListener("click", async function () {
             try {
                 // Replace 'Ali' with the team name you want to query
@@ -41,7 +34,12 @@
                 if (data.error) {
                     document.getElementById("status").innerText = `Error: ${data.error}`;
                 } else {
-                    document.getElementById("datadisplay").innerHTML = "<pre>" + data.coins[0] + "</pre>";
+                    document.getElementById("Bitcoin").innerHTML = "<pre>" + data.coins[0] + "</pre>";
+                    document.getElementById("Polkadot").innerHTML = "<pre>" + data.coins[1] + "</pre>";
+                    document.getElementById("Luna").innerHTML = "<pre>" + data.coins[2] + "</pre>";
+                    document.getElementById("Dogecoin").innerHTML = "<pre>" + data.coins[3] + "</pre>";
+                    document.getElementById("XRP").innerHTML = "<pre>" + data.coins[4] + "</pre>";
+                    document.getElementById("BNB").innerHTML = "<pre>" + data.coins[5] + "</pre>";
                     document.getElementById("status").innerText = "Data fetched successfully.";
                 }
             } catch (error) {
