added master and user

--- a/index.html
+++ b/index.html
@@ -11,51 +11,22 @@
     <button id="updateButton">Update Data</button>
 
     <p>Status: <span id="status"></span></p>
-    <div id="datadisplay"></div>
-    <div id="Bitcoin"></div>
-    <div id="Polkadot"></div>
-    <div id="Luna"></div>
-    <div id="Dogecoin"></div>
-    <div id="XRP"></div>
-    <div id="BNB"></div>
-    <script>
-        document.getElementById("readButton").addEventListener("click", async function () {
-            try {
-                // Replace 'Ali' with the team name you want to query
-                const teamName = 'MasterCoins';
-                const response = await fetch(`/.netlify/functions/read?teamName=${teamName}`);
+    <span>Current Value</span>
+    <span id="Bitcoin">Bitcoin: </span>
+    <span id="Polkadot">Polkadot: </span>
+    <span id="Luna">Luna: </span>
+    <span id="Dogecoin">Dogecoin: </span>
+    <span id="XRP">XRP: </span>
+    <span id="BNB">BNB: </span>
 
-                if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status}`);
-                }
-
-                const data = await response.json();
-
-                if (data.error) {
-                    document.getElementById("status").innerText = `Error: ${data.error}`;
-                } else {
-                    document.getElementById("Bitcoin").innerHTML = "<pre>" + data.coins[0] + "</pre>";
-                    document.getElementById("Polkadot").innerHTML = "<pre>" + data.coins[1] + "</pre>";
-                    document.getElementById("Luna").innerHTML = "<pre>" + data.coins[2] + "</pre>";
-                    document.getElementById("Dogecoin").innerHTML = "<pre>" + data.coins[3] + "</pre>";
-                    document.getElementById("XRP").innerHTML = "<pre>" + data.coins[4] + "</pre>";
-                    document.getElementById("BNB").innerHTML = "<pre>" + data.coins[5] + "</pre>";
-                    document.getElementById("status").innerText = "Data fetched successfully.";
-                }
-            } catch (error) {
-                document.getElementById("status").innerText = "Error: " + error;
-            }
-        });
-        document.getElementById("updateButton").addEventListener("click", function() {
-            fetch("/.netlify/functions/update")
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById("status").innerText = data;
-                })
-                .catch(error => {
-                    document.getElementById("status").innerText = "Error: " + error;
-                });
-        });
-    </script>
+    <p>Status: <span id="statusU"></span></p>
+    <span>In possesion</span>
+    <span id="BitcoinU">Bitcoin: </span>
+    <span id="PolkadotU">Polkadot: </span>
+    <span id="LunaU">Luna: </span>
+    <span id="DogecoinU">Dogecoin: </span>
+    <span id="XRPU">XRP: </span>
+    <span id="BNBU">BNB: </span>
 </body>
+<script href="./module.js"></script>
 </html>
