cheanged href to src in script tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Negotium</title>
-    <script href="./module.js"></script>
+    <script src="./module.js"></script>
 </head>
 <body>
     <h1>Tests</h1>
