--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
 
     <p>Status: <span id="status"></span></p>
     <span>Current Value</span>
-    <span id="Bitcoin">Bitcoin: </span>
-    <span id="Polkadot">Polkadot: </span>
-    <span id="Luna">Luna: </span>
-    <span id="Dogecoin">Dogecoin: </span>
-    <span id="XRP">XRP: </span>
-    <span id="BNB">BNB: </span>
+    <p>Bitcoin<span id="Bitcoin"></span></p>
+    <p>Polkadot:<span id="Polkadot"></span></p>
+    <p>Luna: <span id="Luna"></span></p>
+    <p>Dogecoin: <span id="Dogecoin"></span></p>
+    <p>XRP: <span id="XRP"></span></p>
+    <p>BNB: <span id="BNB"></span></p>
 
     <p>Status: <span id="statusU"></span></p>
     <span>In possesion</span>
-    <span id="BitcoinU">Bitcoin: </span>
-    <span id="PolkadotU">Polkadot: </span>
-    <span id="LunaU">Luna: </span>
-    <span id="DogecoinU">Dogecoin: </span>
-    <span id="XRPU">XRP: </span>
-    <span id="BNBU">BNB: </span>
+    <p>Bitcoin<span id="BitcoinU"></span></p>
+    <p>Polkadot:<span id="PolkadotU"></span></p>
+    <p>Luna: <span id="LunaU"></span></p>
+    <p>Dogecoin: <span id="DogecoinU"></span></p>
+    <p>XRP: <span id="XRPU"></span></p>
+    <p>BNB: <span id="BNBU"></span></p>
 </body>
-
 </html>
