added the free amount

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <p>Dogecoin: <span id="DogecoinU"></span></p>
     <p>XRP: <span id="XRPU"></span></p>
     <p>BNB: <span id="BNBU"></span></p>
+    <p>Free money<span id="FreeMoney"></span></p>
     <script src="./module.js"></script>
 </body>
 </html>
