--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <p>XRP: <span id="XRPU"></span></p>
     <p>BNB: <span id="BNBU"></span></p>
     <p>Free money: <span id="FreeMoney"></span></p>
+    <p>TotalWorth: <span id="TotalWorth"></span></p>
     <script src="./module.js"></script>
 </body>
 </html>
