changes button submit to type button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <br>
 
-        <button type="submit" onclick="signIn(event)">Sign In</button>
+        <button type="button" onclick="signIn(event)">Sign In</button>
     </form>
     <script>
         async function signIn(event) {
