--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 
         <button type="button" onclick="signIn(event)">Sign In</button>
     </form>
-    <script src="./login.js"></script>
+    <script type="module" src="./login.js"></script>
 </body>
 </html>
