--- a/user.html
+++ b/user.html
@@ -29,6 +29,6 @@
     <p>BNB: <span id="BNBU"></span></p>
     <p>Free money: <span id="FreeMoney"></span></p>
     <p>TotalWorth: <span id="TotalWorth"></span></p>
-    <script src="./module.js"></script>
+    <script type="module" src="./module.js"></script>
 </body>
 </html>
