--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <script type="module" src="./login.js"></script>
+
 </head>
 <body>
-
+    <script type="module" src="./login.js"></script>
     <h1>Sign In</h1>
     <div id="errorbox"></div>
     <form id="signInForm">
@@ -21,7 +21,10 @@
 
         <br>
 
-        <button type="button" onclick="signIn()">Sign In</button>
+        <button type="button" id="SignIn">Sign In</button>
     </form>
+    <script>
+        document.getElementById("SignIn").addEventListener('click', signIn);
+    </script>
 </body>
 </html>
