--- a/user.html
+++ b/user.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Negotium</title>
-
 </head>
 <body>
     <h1>Tests</h1>
@@ -29,6 +28,17 @@
     <p>BNB: <span id="BNBU"></span></p>
     <p>Free money: <span id="FreeMoney"></span></p>
     <p>TotalWorth: <span id="TotalWorth"></span></p>
+
+    <p>Status: <span id="statusN"></span></p>
+    <span>New values</span>
+    <p>Bitcoin<input type="number" id="BitcoinN" name="BitcoinN" min="0"></p>
+    <p>Polkadot:<input type="number" id="PolkadotN" name="PolkadotN" min="0"></p>
+    <p>Luna: <input type="number" id="LunaN" name="LunaN" min="0"></p>
+    <p>Dogecoin: <input type="number" id="DogecoinN" name="DogecoinN" min="0"></p>
+    <p>XRP: <input type="number" id="XRPN" name="XRPN" min="0"></p>
+    <p>BNB: <input type="number" id="BNBN" name="BNBN" min="0"></p>
+    <p>Free money: <span id="FreeMoneyN"></span></p>
+    <p>TotalWorth: <span id="TotalWorthN"></span></p>
     <script type="module" src="./module.js"></script>
 </body>
 </html>
