--- a/user.html
+++ b/user.html
@@ -39,6 +39,8 @@
     <p>BNB: <input type="number" id="BNBN" name="BNBN" min="0"></p>
     <p>Free money: <span id="FreeMoneyN"></span></p>
     <p>TotalWorth: <span id="TotalWorthN"></span></p>
+    <script type="module" src="./login.js"></script>
     <script type="module" src="./module.js"></script>
+
 </body>
 </html>
