put the file login in user.html

--- a/user.html
+++ b/user.html
@@ -40,6 +40,6 @@
     <p>Free money: <span id="FreeMoneyN"></span></p>
     <p>TotalWorth: <span id="TotalWorthN"></span></p>
     <script type="module" src="./module.js"></script>
-
+    <script type="module" src="./login.js"></script>
 </body>
 </html>
