--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <script type="module" src="./teamdata.js" defer></script>
+    <script type="module" src="./teamdata.js"></script>
     <script type="module" src="./login.js" defer></script>
 
 </head>
