--- a/user.html
+++ b/user.html
@@ -5,8 +5,6 @@
 </head>
 <body>
     <h1>Tests</h1>
-    
-    <button id="readButton">Read Data</button>
     <button id="updateButton">Update Data</button>
 
     <p>Status: <span id="status"></span></p>
@@ -31,14 +29,31 @@
 
     <p>Status: <span id="statusN"></span></p>
     <span>New values</span>
-    <p>Bitcoin<input type="number" id="BitcoinN" name="BitcoinN" min="0"></p>
-    <p>Polkadot:<input type="number" id="PolkadotN" name="PolkadotN" min="0"></p>
-    <p>Luna: <input type="number" id="LunaN" name="LunaN" min="0"></p>
-    <p>Dogecoin: <input type="number" id="DogecoinN" name="DogecoinN" min="0"></p>
-    <p>XRP: <input type="number" id="XRPN" name="XRPN" min="0"></p>
-    <p>BNB: <input type="number" id="BNBN" name="BNBN" min="0"></p>
+    <p>Update<input type="number" id="BitcoinN" name="BitcoinN" min="0"></p>
+    <label for="CoinType">Select Transaction Type:</label>
+    <select id="CoinType">
+        <option value="bitcoin">Bitcoin</option>
+        <option value="polkadot">Polkadot</option>
+        <option value="luna">Luna</option>
+        <option value="dogecoin">DogeCoin</option>
+        <option value="xrp">XRP</option>
+        <option value="bnb">BNB</option>
+    </select>
+    <label for="transactionType">Select Transaction Type:</label>
+    <select id="transactionType">
+        <option value="buy">Buy</option>
+        <option value="sell">Sell</option>
+    </select>
+
+    <button onclick="readSelectedValue()">Submit</button>
+
     <p>Free money: <span id="FreeMoneyN"></span></p>
     <p>TotalWorth: <span id="TotalWorthN"></span></p>
+
+
+
+
+
     <script type="module" src="./teamdata.js" defer></script>
     <script type="module" src="./module.js" defer></script>
 
