--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sign In</title>
     <script type="module" src="./teamdata.js" defer></script>
     <script type="module" src="./login.js" defer></script>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 
