--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <div class ="blur-background center-block">
+        <h1>NEGOTIUM</h1>
+        <div id="errorbox"></div>
+        <form id="signInForm">
+            <label for="teamName">Team Name:</label>
+            <input type="text" id="teamName" name="teamName" required>
 
-    <h1>Sign In</h1>
-    <div id="errorbox"></div>
-    <form id="signInForm">
-        <label for="teamName">Team Name:</label>
-        <input type="text" id="teamName" name="teamName" required>
+            <br>
 
-        <br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+            <br>
 
-        <br>
-
-        <button type="button" onclick="signIn()">Sign In</button>
-    </form>
-
+            <button type="button" onclick="signIn()">Sign In</button>
+        </form>
+    </div>
 </body>
 </html>
