added some more css for login

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <div class ="blur-background center-block">
-        <h1>NEGOTIUM</h1>
+        <h1>NEGOTIUM - CCX </h1>
         <div id="errorbox"></div>
         <form id="signInForm">
-            <label for="teamName">Team Name:</label>
-            <input type="text" id="teamName" name="teamName" required>
-
+            <label for="teamName">Team Name</label>
+            <div id="teamNameContainer">
+                <input type="text" id="teamName" name="teamName" required>
+              </div>
             <br>
 
-            <label for="password">Password:</label>
+            <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
 
             <br>
