turned off the auto complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="errorbox"></div>
         <form id="signInForm">
             <label for="teamName">Team Name</label>
-            <input type="text" id="teamName" name="teamName" required>
+            <input type="text" id="teamName" name="teamName" required autocomplete="off">
             <br>
 
             <label for="password">Password</label>
