--- a/user.html
+++ b/user.html
@@ -25,7 +25,7 @@
 
                     </td>
                     <td style="color:  rgb(255, 202, 103);">COIN</td>
-                    <td style="color:  rgb(255, 202, 103);">Worth</td>
+                    <td style="color:  rgb(255, 202, 103);">Worth($)</td>
                     <td><span id="pricechange"></span></td>
                     <td>
 
@@ -144,10 +144,10 @@
             <div class="Balance">
                 BALANCE: <span id="TotalWorth"></span> $
             </div>
-            <table>
+            <table> 
                 <tr>
                     <td style="color:  rgb(255, 202, 103);">COIN</td>
-                    <td style="color:  rgb(255, 202, 103);">Worth</td>
+                    <td style="color:  rgb(255, 202, 103);">Worth($)</td>
                 </tr>
                 <tr>
                     <td>Bitcoin</td>
