added the trending functnality

--- a/user.html
+++ b/user.html
@@ -40,7 +40,7 @@
                     </td>
                     <td>Bitcoin (BTC)</td>
                     <td id="Bitcoin"></td>
-                    <td id="PriceChange"></td>
+                    <td id="PriceChangeBTC"></td>
                     <td>
                         <span class="material-symbols-outlined trend-black" id="BTC">
                             unknown_med
@@ -55,7 +55,7 @@
                     </td>
                     <td>Polkadot (DOT)</td>
                     <td id="Polkadot"></td>
-                    <td id="PriceChange"></td>
+                    <td id="PriceChangeDOT"></td>
                     <td>
                         <span class="material-symbols-outlined trend-black" id="DOT">
                             unknown_med
@@ -70,7 +70,7 @@
                     </td>
                     <td>Terra Luna (LUNA)</td>
                     <td id="Luna"></td>
-                    <td id="PriceChange"></td>
+                    <td id="PriceChangeLUNA"></td>
                     <td>
                         <span class="material-symbols-outlined trend-black" id="Terra">
                             unknown_med
@@ -85,7 +85,7 @@
                     </td>
                     <td>Dogecoin (DOGE)</td>
                     <td id="Dogecoin"></td>
-                    <td id="PriceChange"></td>
+                    <td id="PriceChangeDOGE"></td>
                     <td>
                         <span class="material-symbols-outlined trend-black" id="DOGE">
                             unknown_med
@@ -100,7 +100,7 @@
                     </td>
                     <td>XRP</td>
                     <td id="XRP"></td>
-                    <td id="PriceChange"></td>
+                    <td id="PriceChangeXRP"></td>
                     <td>
                         <span class="material-symbols-outlined trend-black" id="xrp">
                             unknown_med
@@ -115,7 +115,7 @@
                     </td>
                     <td>BNB</td>
                     <td id="BNB"></td>
-                    <td id="PriceChange"></td>
+                    <td id="PriceChangeBNB"></td>
                     <td>
                         <span class="material-symbols-outlined trend-black" id="bnb">
                             unknown_med
@@ -130,7 +130,7 @@
                     </td>
                     <td>Ethereum (ETH)</td>
                     <td id="Ethereum"></td>
-                    <td id="PriceChange"></td>
+                    <td id="PriceChangeETH"></td>
                     <td>
                         <span class="material-symbols-outlined trend-black" id="ETH">
                             unknown_med
