--- a/user.html
+++ b/user.html
@@ -26,7 +26,7 @@
                     </td>
                     <td style="color:  rgb(255, 202, 103);">COIN</td>
                     <td style="color:  rgb(255, 202, 103);">Worth($)</td>
-                    <td><span id="pricechange"></span></td>
+                    <td style="color:  rgb(255, 202, 103);">(%)</td>
                     <td>
 
                     </td>
