Made the headings more suitable Added restriction for integer only

--- a/user.html
+++ b/user.html
@@ -150,19 +150,19 @@
                     <td style="color:  rgb(255, 202, 103);">Worth($)</td>
                 </tr>
                 <tr>
-                    <td>Bitcoin</td>
+                    <td>Bitcoin (BTC)</td>
                     <td><span id="BitcoinU"></span></td>
                 </tr>
                 <tr>
-                    <td>Polkadot</td>
+                    <td>Polkadot (DOT)</td>
                     <td><span id="PolkadotU"></span></td>
                 </tr>
                 <tr>
-                    <td>Luna</td>
+                    <td>Terra Luna (LUNA)</td>
                     <td><span id="LunaU"></span></td>
                 </tr>
                 <tr>
-                    <td>Dogecoin</td>
+                    <td>Dogecoin (DOGE)</td>
                     <td><span id="DogecoinU"></span></td>
                 </tr>
                 <tr>
@@ -174,11 +174,11 @@
                     <td><span id="BNBU"></span></td>
                 </tr>
                 <tr>
-                    <td>Ethereum</td>
+                    <td>Ethereum (ETH)</td>
                     <td><span id="EthereumU"></span></td>
                 </tr>
                 <tr>
-                    <td>Free money</td>
+                    <td>Free Balance</td>
                     <td><span id="FreeMoney"></span></td>
                 </tr>
 
@@ -187,7 +187,7 @@
             <div class="updateline">
 
                 <!--<p>Status: <span id="statusN"></span></p>-->
-                <p class="Update_Word"><input type="number" id="update" name="update" min="0"></p>
+                <p class="Update_Word"><input type="number" id="update" name="update" min="0" step="1"></p>
                 <select id="CoinType">
                     <option value="bitcoin">Bitcoin</option>
                     <option value="polkadot">Polkadot</option>
