--- a/user.html
+++ b/user.html
@@ -27,6 +27,20 @@
             <div id="information"><span id="attention">IMPORTANT NEWS</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NORTH KOREA HAS ATTACKED SEOUL. DUE TO PANIC, BANKS HAVE FALLEN, CAUSING A SUDDEN RISE IN CRYPTO PRICES.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="attention">IMPORTANT NEWS</span></div>
         </div>
         -->
+        <div class="logos">
+            <div class="cedar-logo">
+                <img src='https://i.postimg.cc/Znjs0SWF/Cedar-Logo.png' border='0' alt='Cedar-Logo' width="60vh" height="60vh" class="cedar" />
+            </div>
+            <div class="Negotium-logo">
+                <img src='https://i.postimg.cc/bJwtpfjj/Frame-6.png' border='0' alt='Frame-6' width="60vh" height="60vh"  class="negotium"/>
+            </div>
+            <div class="ccx-logo">
+                <img src='https://i.postimg.cc/c1YsC54q/CCX.png' border='0' alt='CCX' width="60vh" height="60vh" class="ccx"/>
+            </div>
+            <div class="logout-button">
+
+            </div>
+        </div>
         <div class="sidepanel">
             <table class="Master_Table">
                 <tr>
@@ -47,7 +61,7 @@
                         <path fill="#ffc107" d="M44,24c0,11.044-8.956,20-20,20S4,35.044,4,24S12.956,4,24,4S44,12.956,44,24z"></path><path fill="#fff8e1" d="M17,34V14h8.199c2.41,0,4.234,0.465,5.48,1.395s1.867,2.293,1.867,4.086c0,0.98-0.25,1.844-0.746,2.59c-0.5,0.746-1.195,1.293-2.086,1.641c1.016,0.258,1.816,0.773,2.402,1.555C32.703,26.043,33,26.992,33,28.121c0,1.922-0.609,3.379-1.828,4.367S28.219,33.98,25.965,34H17z M21,22h4.363c2.063-0.035,3.098-0.824,3.098-2.445c0-0.906-0.262-1.559-0.785-1.957S26.328,17,25.199,17H21V22z M21,25v6h4.844C26.805,31,29,30.531,29,28.391S27.883,25.027,26,25H21z"></path><path fill="#fff8e1" d="M20 11h3v5h-3V11zM25 11h3v5h-3V11zM20 32h3v5h-3V32zM25 32h3v5h-3V32z"></path>
                         </svg>
                     </td>
-                    <td>Bitcoin (BTC)</td>
+                    <td>BTC</td>
                     <td id="Bitcoin"></td>
                     <td id="PriceChangeBTC"></td>
                     <td>
@@ -58,11 +72,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href='https://postimages.org/' target='_blank'>
-                            <img src='https://i.postimg.cc/nh4RJnnt/icons8-polkadot-64.png' border='0' alt='icons8-polkadot-64' style='width: 25px; height: 25px;'/>
-                        </a>
+                        <img src='https://i.postimg.cc/nh4RJnnt/icons8-polkadot-64.png' border='0' alt='icons8-polkadot-64' style='width: 25px; height: 25px;'/>
                     </td>
-                    <td>Polkadot (DOT)</td>
+                    <td>DOT</td>
                     <td id="Polkadot"></td>
                     <td id="PriceChangeDOT"></td>
                     <td>
@@ -73,11 +85,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href='https://postimages.org/' target='_blank'>
-                            <img src='https://i.postimg.cc/J0LJxGz2/terra-luna-icon.png' border='0' alt='terra-luna-icon' style='width: 25px; height: 25px;'/>
-                        </a>
+                        <img src='https://i.postimg.cc/J0LJxGz2/terra-luna-icon.png' border='0' alt='terra-luna-icon' style='width: 25px; height: 25px;'/>
                     </td>
-                    <td>Terra Luna (LUNA)</td>
+                    <td>LUNA</td>
                     <td id="Luna"></td>
                     <td id="PriceChangeLUNA"></td>
                     <td>
@@ -88,11 +98,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href='https://postimages.org/' target='_blank'>
-                            <img src='https://i.postimg.cc/Nf7M4dv6/dogecoin-4894534.png' border='0' alt='dogecoin-4894534' style='width: 25px; height: 25px;'/>
-                        </a>
+                        <img src='https://i.postimg.cc/Nf7M4dv6/dogecoin-4894534.png' border='0' alt='dogecoin-4894534' style='width: 25px; height: 25px;'/>
                     </td>
-                    <td>Dogecoin (DOGE)</td>
+                    <td>DOGE</td>
                     <td id="Dogecoin"></td>
                     <td id="PriceChangeDOGE"></td>
                     <td>
@@ -103,9 +111,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href='https://postimages.org/' target='_blank'>
-                            <img src='https://i.postimg.cc/tT6s3yzk/xrp-1.png' border='0' alt='xrp-1' style='width: 25px; height: 25px;'/>
-                        </a>
+                        <img src='https://i.postimg.cc/tT6s3yzk/xrp-1.png' border='0' alt='xrp-1' style='width: 25px; height: 25px;'/>
                     </td>
                     <td>XRP</td>
                     <td id="XRP"></td>
@@ -118,9 +124,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href='https://postimages.org/' target='_blank'>
-                            <img src='https://i.postimg.cc/Zq5bYmgn/bnb.png' border='0' alt='bnb' style='width: 25px; height: 25px;'/>
-                        </a>
+                        <img src='https://i.postimg.cc/Zq5bYmgn/bnb.png' border='0' alt='bnb' style='width: 25px; height: 25px;'/>
                     </td>
                     <td>BNB</td>
                     <td id="BNB"></td>
@@ -133,11 +137,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href='https://postimages.org/' target='_blank'>
-                            <img src='https://i.postimg.cc/Y94WdZ1n/eth.png' border='0' alt='eth' style='width: 25px; height: 25px;'/>
-                        </a>
+                        <img src='https://i.postimg.cc/Y94WdZ1n/eth.png' border='0' alt='eth' style='width: 25px; height: 25px;'/>
                     </td>
-                    <td>Ethereum (ETH)</td>
+                    <td>ETH</td>
                     <td id="Ethereum"></td>
                     <td id="PriceChangeETH"></td>
                     <td>
@@ -155,38 +157,63 @@
             </div>
             <table> 
                 <tr>
-                    <td style="color:  rgb(255, 202, 103);">COIN</td>
-                    <td style="color:  rgb(255, 202, 103);">Worth($)</td>
+                    <td class="coin-logos"></td>
+                    <td style="color:  rgb(255, 202, 103);" width="fit-content">COIN</td>
+                    <td style="color:  rgb(255, 202, 103);">Number</td>
                 </tr>
                 <tr>
-                    <td>Bitcoin (BTC)</td>
+                    <td>
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 48 48">
+                        <path fill="#ffc107" d="M44,24c0,11.044-8.956,20-20,20S4,35.044,4,24S12.956,4,24,4S44,12.956,44,24z"></path><path fill="#fff8e1" d="M17,34V14h8.199c2.41,0,4.234,0.465,5.48,1.395s1.867,2.293,1.867,4.086c0,0.98-0.25,1.844-0.746,2.59c-0.5,0.746-1.195,1.293-2.086,1.641c1.016,0.258,1.816,0.773,2.402,1.555C32.703,26.043,33,26.992,33,28.121c0,1.922-0.609,3.379-1.828,4.367S28.219,33.98,25.965,34H17z M21,22h4.363c2.063-0.035,3.098-0.824,3.098-2.445c0-0.906-0.262-1.559-0.785-1.957S26.328,17,25.199,17H21V22z M21,25v6h4.844C26.805,31,29,30.531,29,28.391S27.883,25.027,26,25H21z"></path><path fill="#fff8e1" d="M20 11h3v5h-3V11zM25 11h3v5h-3V11zM20 32h3v5h-3V32zM25 32h3v5h-3V32z"></path>
+                        </svg>
+                    </td>
+                    <td>BTC</td>
                     <td><span id="BitcoinU"></span></td>
                 </tr>
                 <tr>
-                    <td>Polkadot (DOT)</td>
+                    <td>
+                        <img src='https://i.postimg.cc/nh4RJnnt/icons8-polkadot-64.png' border='0' alt='icons8-polkadot-64' style='width: 25px; height: 25px;'/>
+                    </td>
+                    <td>DOT</td>
                     <td><span id="PolkadotU"></span></td>
                 </tr>
                 <tr>
-                    <td>Terra Luna (LUNA)</td>
+                    <td>
+                        <img src='https://i.postimg.cc/J0LJxGz2/terra-luna-icon.png' border='0' alt='terra-luna-icon' style='width: 25px; height: 25px;'/>
+                    </td>
+                    <td>LUNA</td>
                     <td><span id="LunaU"></span></td>
                 </tr>
                 <tr>
-                    <td>Dogecoin (DOGE)</td>
+                    <td>
+                        <img src='https://i.postimg.cc/Nf7M4dv6/dogecoin-4894534.png' border='0' alt='dogecoin-4894534' style='width: 25px; height: 25px;'/>
+                    </td>
+                    <td>DOGE</td>
                     <td><span id="DogecoinU"></span></td>
                 </tr>
                 <tr>
+                    <td>
+                        <img src='https://i.postimg.cc/tT6s3yzk/xrp-1.png' border='0' alt='xrp-1' style='width: 25px; height: 25px;'/>
+                    </td>
                     <td>XRP</td>
                     <td><span id="XRPU"></span></td>
                 </tr>
                 <tr>
+                    <td>
+                        <img src='https://i.postimg.cc/Zq5bYmgn/bnb.png' border='0' alt='bnb' style='width: 25px; height: 25px;'/>
+                    </td>
                     <td>BNB</td>
                     <td><span id="BNBU"></span></td>
                 </tr>
                 <tr>
-                    <td>Ethereum (ETH)</td>
+                    <td>
+                        <img src='https://i.postimg.cc/Y94WdZ1n/eth.png' border='0' alt='eth' style='width: 25px; height: 25px;'/>
+                    </td>
+                    <td>ETH</td>
                     <td><span id="EthereumU"></span></td>
                 </tr>
                 <tr>
+                    <td></td>
                     <td>Free Balance</td>
                     <td><span id="FreeMoney"></span></td>
                 </tr>
