removed test and made logical changes to the calc

--- a/user.html
+++ b/user.html
@@ -229,9 +229,9 @@
                     <option value="polkadot">Polkadot</option>
                     <option value="luna">Luna</option>
                     <option value="dogecoin">DogeCoin</option>
-                    <option value="xrp1">XRP</option>
-                    <option value="bnb1">BNB</option>
-                    <option value="eth1">Ethereum</option>
+                    <option value="xrp">XRP</option>
+                    <option value="bnb">BNB</option>
+                    <option value="eth">Ethereum</option>
                 </select>
                 <select id="transactionType">
                     <option value="buy">Buy</option>
