--- a/user.html
+++ b/user.html
@@ -223,7 +223,9 @@
             <div class="updateline">
 
                 <!--<p>Status: <span id="statusN"></span></p>-->
-                <p class="Update_Word"><input type="number" id="update" name="update" min="0" step="1"></p>
+                <p class="Update_Word">
+                    <input type="number" id="update" name="update" min="0" step="0.001" pattern="\d+(\.\d{1,3})?">
+                </p>
                 <select id="CoinType">
                     <option value="bitcoin">Bitcoin</option>
                     <option value="polkadot">Polkadot</option>
