--- a/user.html
+++ b/user.html
@@ -227,13 +227,13 @@
                     <input type="number" id="update" name="update" min="0" step="0.001" pattern="\d+(\.\d{1,3})?">
                 </p>
                 <select id="CoinType">
-                    <option value="bitcoin">Bitcoin</option>
-                    <option value="polkadot">Polkadot</option>
-                    <option value="luna">Luna</option>
-                    <option value="dogecoin">DogeCoin</option>
+                    <option value="bitcoin">BTC</option>
+                    <option value="polkadot">DOT</option>
+                    <option value="luna">LUNA</option>
+                    <option value="dogecoin">DOGE</option>
                     <option value="xrp">XRP</option>
                     <option value="bnb">BNB</option>
-                    <option value="eth">Ethereum</option>
+                    <option value="eth">ETH</option>
                 </select>
                 <select id="transactionType">
                     <option value="buy">Buy</option>
