--- a/user.html
+++ b/user.html
@@ -226,6 +226,7 @@
                 <p class="Update_Word">
                     <input type="number" id="update" name="update" min="0" step="0.001" pattern="\d+(\.\d{1,3})?">
                 </p>
+                <div class="buying-power"></div>
                 <select id="CoinType">
                     <option value="bitcoin">BTC</option>
                     <option value="polkadot">DOT</option>
