added liquidate button

--- a/user.html
+++ b/user.html
@@ -240,7 +240,7 @@
                     <option value="buy">Buy</option>
                     <option value="sell">Sell</option>
                 </select>
-
+                <button id = "liquidate">liquidate</button>
                 <button id = "readSelectedValue">Submit</button>
             </div>
         </div>
