--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
         <h1>NEGOTIUM - CCX </h1>
         <div id="errorbox"></div>
         <form id="signInForm">
-            <label for="teamName">Team Name</label>
-            <input type="text" id="teamName" name="teamName" required autocomplete="off">
+
+            <label for="password">Team Name</label>
+            <input type="text" id="password" name="password" required autocomplete="off">
             <br>
 
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+            <label for="teamName">Password</label>
+            <input type="password" id="teamName" name="teamName" required>
             <br>
+
+
 
             <button type="button" onclick="signIn()">Sign In</button>
         </form>
